added cool footer

--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -108,17 +108,19 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__social-01">
-            <a href="">
-                <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" /></a>
-        </div>
-        <div class="footer__social-02">
-            <a href="">
-                <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" /></a>
-        </div>
-        <div class="footer__social-03">
-            <a href="">
-                <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
+        <div class="footer-wrapper">
+            <div class="footer__social-01">
+                <a href="">
+                    <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" /></a>
+            </div>
+            <div class="footer__social-02">
+                <a href="">
+                    <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" /></a>
+            </div>
+            <div class="footer__social-03">
+                <a href="">
+                    <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
+            </div>
         </div>
         <p>
             Created with love by
