--- a/project-build-1/contactus.html
+++ b/project-build-1/contactus.html
@@ -79,26 +79,31 @@ png" alt="logo de la empresa" />
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__social-01">
-            <a href="">
-                <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" /></a>
-        </div>
-        <div class="footer__social-02">
-            <a href="">
-                <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" /></a>
-        </div>
-        <div class="footer__social-03">
-            <a href="">
-                <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
+        <div class="footer-wrapper">
+            <div class="footer__social-01">
+                <a href="">
+                    <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" /></a>
+            </div>
+            <div class="footer__social-02">
+                <a href="">
+                    <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" /></a>
+            </div>
+            <div class="footer__social-03">
+                <a href="">
+                    <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
+            </div>
         </div>
         <p>
             Created with love by
             <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
+        >and
+        <a
+          href="https://www.linkedin.com/in/stefanny-ascencio-jimenez-bab469234/"
         >
-        and <a href=""> SteasDev💜</a>
-        </p>
+          SteasDev💜</a
+        >
+      </p>
     </footer>
-</body>
-<script src="script.js"></script>
-
+  </body>
+  <script src="script.js"></script>
 </html>
