--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -125,11 +125,14 @@
         <p>
             Created with love by
             <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
+        >and
+        <a
+          href="https://www.linkedin.com/in/stefanny-ascencio-jimenez-bab469234/"
         >
-        and <a href=""> SteasDev💜</a>
-        </p>
+          SteasDev💜</a
+        >
+      </p>
     </footer>
-</body>
-<script src="script.js"></script>
-
+  </body>
+  <script src="script.js"></script>
 </html>
